# iomoments

./: .clang-format  .clang-tidy  .flake8  .gitignore  CD-PIPELINE-PROPOSAL.md  COPYRIGHT  DECISIONS.md  Makefile  README.md  conftest.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  mc.yml
debian/: changelog  control  copyright  iomoments.lintian-overrides  rules
docs/: aws-tracer-findings.md  d019-findings.md  perf_history.md
docs/d019-data/A/1/: fio.json  iomoments.json  meta.txt
docs/d019-data/A/2/: fio.json  iomoments.json  meta.txt
docs/d019-data/A/3/: fio.json  iomoments.json  meta.txt
docs/d019-data/B/1/: fio.json  iomoments.json  meta.txt
docs/d019-data/B/2/: fio.json  iomoments.json  meta.txt
docs/d019-data/B/3/: fio.json  iomoments.json  meta.txt
docs/d019-data/C/1/: fio.json  iomoments.json  meta.txt
docs/d019-data/C/2/: fio.json  iomoments.json  meta.txt
docs/d019-data/C/3/: fio.json  iomoments.json  meta.txt
scripts/: aws_tracer.sh  measure_bpf_overhead.sh  measure_bpf_overhead_in_vm.sh
scripts/calibration_d019/: README.md  class_a.fio  class_b.fio  class_c.fio  provision.sh  run.sh
src/: hello_world.c  iomoments.bpf.c  iomoments.c  iomoments_level2.h  iomoments_spectral.h  iomoments_topk.h  iomoments_verdict.h  pebay.h  pebay_bpf.h  u128.h
tests/: test_bpf_skeleton.py  test_calibration_moments.py  test_pebay_ref.py
tests/c/: test_level2.c  test_mc.c  test_pebay.c  test_pebay_bpf.c  test_topk.c  test_u128.c  test_verdict.c
tooling/: aws_tracer_producer.py  c_test_producer.py  cppcheck.suppress  cppcheck.suppress.README.md  iomoments-ontology.json  iomoments-ontology.yaml  perf_producer.py  vmtest_matrix_producer.py
tooling/hooks/: install.sh  pre-commit.sh  pre-push.sh
tooling/src/audit_ontology/: __init__.py  __main__.py  audit.py  cli.py  consistency.py  env_match.py  formatter.py  freshness.py  git_helpers.py  parser.py  perf_budget.py  resolver.py
tooling/src/iomoments_ontology/: __init__.py  build.py  dag.py  models.py  types.py
tooling/src/iomoments_oracle/: __init__.py
tooling/tests/: audit_negatives.pict  test_audit_freshness.py  test_audit_negatives.py  test_audit_negatives_pict.py  test_audit_ontology.py  test_audit_perf_budget.py  test_aws_tracer_producer.py  test_c_test_producer.py  test_ontology_baseline.py  test_ontology_build.py  test_ontology_phase3.py  test_ontology_phase4.py  test_ontology_syse.py  test_perf_producer.py  test_pytest_producer.py  test_test_results_dag_persistence.py  test_test_results_models.py  test_vmtest_matrix_producer.py
